crates/php-parser/tests/fixtures/errors/invalid_missing_semicolons.php
<?php
echo "hello"
echo "world";
$x = 1 + 2